# mayutils

./: .env.dist  .gitignore  .pre-commit-config.yaml  .todo  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  mkdocs.yml  prek.toml  pyproject.toml  ruff.toml  ty.toml
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci.yaml  docs.yaml  merge-gatekeeper.yaml  refresh-stubs.yaml  release.yml
Notebooks/: chart_examples.ipynb
Notebooks/examples/: charts.ipynb
Notebooks/tests/: chart.ipynb  colour.ipynb  datetime.ipynb  deco.ipynb  log.ipynb  maths.ipynb  oauth.ipynb  test.pptx
Templates/Cookiecutter/: cookiecutter.json
Templates/Cookiecutter/default/{{ cookiecutter.__package_slug }}/: .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Containerfile  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  prek.toml.template  pyproject.toml  renovate.json  ruff.toml
Templates/Cookiecutter/default/{{ cookiecutter.__package_slug }}/.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  SUPPORT.md  copilot-instructions.md  funding.yml
Templates/Cookiecutter/default/{{ cookiecutter.__package_slug }}/.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
Templates/Cookiecutter/default/{{ cookiecutter.__package_slug }}/.github/workflows/: ci.yaml  docs.yaml  release.yml  stale.yml  test.yml
Templates/Cookiecutter/default/{{ cookiecutter.__package_slug }}/.streamlit/: config.toml  secrets.tmpl.toml
Templates/Cookiecutter/default/{{ cookiecutter.__package_slug }}/docs/: changelog.md  gen_ref_pages.py  getting-started.md  installation.md  roadmap.md  usage.md
Templates/Cookiecutter/default/{{ cookiecutter.__package_slug }}/docs/guides/: development.md  documentation.md  testing.md
Templates/Cookiecutter/default/{{ cookiecutter.__package_slug }}/docs/hooks/: readme_to_index.py
Templates/Cookiecutter/default/{{ cookiecutter.__package_slug }}/docs/stylesheets/: extra.css
Templates/Cookiecutter/default/{{ cookiecutter.__package_slug }}/src/{{ cookiecutter.__package_snake }}/: __init__.py
Templates/Cookiecutter/default/{{ cookiecutter.__package_slug }}/src/{{ cookiecutter.__package_snake }}/app/views/: __init__.py
Templates/Cookiecutter/default/{{ cookiecutter.__package_slug }}/src/{{ cookiecutter.__package_snake }}/cli/: main.py
Templates/Cookiecutter/default/{{ cookiecutter.__package_slug }}/src/{{ cookiecutter.__package_snake }}/data/: __init__.py
Templates/Cookiecutter/default/{{ cookiecutter.__package_slug }}/src/{{ cookiecutter.__package_snake }}/models/: __init__.py
Templates/Cookiecutter/default/{{ cookiecutter.__package_slug }}/src/{{ cookiecutter.__package_snake }}/models/training/: __init__.py
Templates/Cookiecutter/default/{{ cookiecutter.__package_slug }}/src/{{ cookiecutter.__package_snake }}/scripts/: __init__.py
Templates/Cookiecutter/default/{{ cookiecutter.__package_slug }}/src/{{ cookiecutter.__package_snake }}/utilities/: __init__.py
Templates/Cookiecutter/default/{{ cookiecutter.__package_slug }}/src/{{ cookiecutter.__package_snake }}/visualisation/: __init__.py
Templates/Cookiecutter/default/{{ cookiecutter.__package_slug }}/src/{{ cookiecutter.package_name }}/: __init__.py
Templates/Cookiecutter/default/{{ cookiecutter.__package_slug }}/src/{{ cookiecutter.package_name }}/cli/: main.py
Templates/Powerpoints/: temp.pptx
docs/: changelog.md  gen_ref_pages.py  getting-started.md  roadmap.md
docs/guides/: dependency-groups.md  development.md  documentation.md  testing.md
docs/hooks/: generate_dependency_groups.py  readme_to_index.py
docs/includes/: abbreviations.md
src/mayutils/: __init__.py
temp/: temp.ipy
tests/: __init__.py  test_lazy_imports.py  test_module.py
tests/core/: __init__.py  test_constants.py  test_extras.py
tests/data/: test_live.py  test_queries.py  test_read.py  test_read_query_regressions.py  test_templating.py
tests/environment/: __init__.py  test_benchmarking.py  test_oauth.py  test_secrets.py
tests/export/: __init__.py  test_html.py  test_images.py  test_nbconvert.py  test_quarto.py
tests/interfaces/: __init__.py
tests/mathematics/: __init__.py  test_attribution.py  test_experiments.py  test_numba.py  test_numpy.py
tests/objects/: __init__.py  test_classes.py  test_colours.py  test_constants.py  test_datetime.py  test_datetime_numpy.py  test_decorators.py  test_dictionaries.py  test_functions.py  test_hashing.py  test_interval.py  test_numbers.py  test_paths.py  test_strings.py  test_timezone.py  test_traveller.py  test_types.py  test_versions.py
tests/scripts/: __init__.py  test_clear_cache.py  test_generate_plotly_stubs.py  test_refresh_stubs.py
tests/visualisation/: __init__.py  conftest.py  test_notebook.py
typings/dataframe_image/: __init__.pyi  _browser_pdf.pyi  _bundler.pyi  _command_line.pyi  _convert.pyi  _latex_pdf.pyi  _my_asyncio.pyi  _pandas_accessor.pyi  _preprocessors.pyi  download-chrome-headless-shell.pyi  logger.pyi  pd_html.pyi
typings/fitz/: __init__.pyi  table.pyi  utils.pyi
typings/google_auth_oauthlib/: __init__.pyi  flow.pyi  helpers.pyi  interactive.pyi
typings/googleapiclient/: _auth.pyi  _helpers.pyi  discovery.pyi  errors.pyi  http.pyi  mimeparse.pyi  model.pyi  schema.pyi
typings/html2image/: __init__.pyi  cli.pyi  html2image.pyi
typings/kaleido/: __init__.pyi  _page_generator.pyi  _profiler.pyi  _sync_server.pyi  errors.pyi  kaleido.pyi
typings/lxml/: ElementInclude.pyi  __init__.pyi  _elementpath.pyi  builder.pyi  cssselect.pyi  doctestcompare.pyi  sax.pyi
typings/mayutils/: __init__.pyi
typings/modin/: __init__.pyi  db_conn.pyi  error_message.pyi  utils.pyi
typings/numba/: __init__.pyi  extending.pyi
typings/plotly/: __init__.pyi  _subplots.pyi  animation.pyi  basedatatypes.pyi  basewidget.pyi  callbacks.pyi  missing_anywidget.pyi  serializers.pyi  shapeannotation.pyi  subplots.pyi  tools.pyi  utils.pyi  validator_cache.pyi
typings/pyarrow/: __init__.pyi  _compute_docstrings.pyi  _generated_version.pyi  cffi.pyi  compute.pyi  conftest.pyi  (+9 more)
(+1795 files in other folders)
