[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.7,<0.12.0"]

[dependency-groups]
dev = [
  "commitizen>=4.13",
  "coverage>=7.11.0",
  "ipdb>=0.13.13",
  "mayutils",
  "mdformat>=1.0.0",
  "mdformat-gfm>=1.0.0",
  "mdformat-mkdocs>=5.2.0b2",
  "mdformat-pyproject>=0.1.1",
  "mypy>=1.18.2",
  "pre-commit>=4.3.0",
  "pytest>=8.4.2",
  "ruff>=0.14.2",
  "toml-sort>=0.24",
  "ty>=0.0.1a24"
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-autorefs>=1.4.4",
  "mkdocs-gen-files>=0.5",
  "mkdocs-literate-nav>=0.6",
  "mkdocs-material>=9.6",
  "mkdocs-section-index>=0.3",
  "mkdocstrings[python]>=0.29"
]
testing = ["pytest>=8.4.2"]

[project]
authors = [{email = "mayuran.k.v@gmail.com", name = "Mayuran Visakan"}]
dependencies = [
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1"
]
description = "Utilities for Python from Mayuran Visakan"
license = {file = "LICENSE"}
maintainers = [{email = "mayuran.k.v@gmail.com", name = "Mayuran Visakan"}]
name = "mayutils"
readme = "README.md"
requires-python = ">=3.13,<4.0"
version = "1.2.52"

[project.optional-dependencies]
all = [
  "mayutils[async,cli,console,dataframes,datetime,filesystem,financials,google,mathematics,microsoft,notebook,numerics,pandas,pdf,plotting,secrets,snowflake,sql,statistics,streamlit,web]"
]
async = [
  "asyncer>=0.0.8"
]
cli = [
  "cookiecutter>=2.6.0",
  "mayutils[console]",
  "typer"
]
console = [
  "rich>=14.1.0"
]
dataframes = [
  "mayutils[pandas]",
  "modin[all]>=0.35.0",
  "polars>=1.32.3",
  "dask"
]
datetime = [
  "mayutils[numerics]",
  "pendulum[test]>=3.1.0"
]
filesystem = [
  "gitpython>=3.1.45",
  "watchdog>=6.0.0"
]
financials = [
  "mayutils[numerics]",
  "numpy-financial>=1.0.0"
]
google = [
  "google-api-python-client>=2.179.0",
  "google-auth>=2.40.3",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.2",
  "google-cloud-storage>=3.3.0"
]
mathematics = [
  "mayutils[numerics]",
  "sympy",
  "numba>=0.62.0rc1"
]
microsoft = [
  "openpyxl>=3.1.5",
  "python-pptx>=1.0.2"
]
notebook = [
  "ipykernel>=6.30.1",
  "itables>=2.4.5",
  "jupyter>=1.1.1",
  "jupysql>=0.11.1",
  "mayutils[console]",
  "nbconvert>=7.16.6",
  "unicodeit>=0.7.5",
  "quarto-cli>=1.9.37"
]
numerics = [
  "numpy>=2.3.2"
]
pandas = [
  "mayutils[numerics]",
  "pandas>=2.3.2",
  "pyarrow>=21.0.0"
]
pdf = [
  "pillow>=11.3.0",
  "pymupdf>=1.26.4"
]
plotting = [
  "mayutils[numerics]",
  "dataframe-image>=0.2.7",
  "great-tables>=0.18.0",
  "html2image>=2.0.7",
  "kaleido>=1.0.0",
  "markdown",
  "matplotlib>=3.10.5",
  "mistune>=3.2.0",
  "pillow>=11.3.0",
  "plotly>=6.3.0",
  "scipy>=1.16.1"
]
recommended = [
  "mayutils[console,pandas,datetime,notebook,plotting,secrets]"
]
secrets = [
  "python-dotenv>=1.1.1",
  "keyring>=25.6.0"
]
snowflake = [
  "mayutils[sql]",
  "snowflake-connector-python[secure-local-storage]>=3.17.2",
  "snowflake-sqlalchemy>=1.7.6"
]
sql = [
  "sqlalchemy>=2.0.43,<2.1"
]
statistics = [
  "mayutils[numerics]",
  "scikit-learn>=1.7.1",
  "scipy>=1.16.1",
  "statsmodels"
]
streamlit = [
  "streamlit>=1.49.0"
]
types = [
  "google-api-python-client-stubs>=1.34.0",
  "pandas-stubs>=2.3.2.250827",
  "scipy-stubs>=1.16.2.4",
  "types-cachetools>=6.2.0.20251022",
  "types-decorator>=5.2.0.20250324",
  "types-markdown>=3.10.0.20251106",
  "types-openpyxl>=3.1.5.20250919",
  "types-pycurl>=7.45.7.20250926",
  "types-python-dateutil>=2.9.0.20251008",
  "types-pyyaml>=6.0.12.20250915",
  "types-requests>=2.32.4.20250913",
  "types-simplejson>=3.20.0.20250822",
  "types-six>=1.17.0.20250515",
  "types-toml>=0.10.8.20240310"
]
web = [
  "chromedriver-autoinstaller>=0.6.4",
  "playwright>=1.55.0",
  "selenium>=4.35.0"
]

[project.scripts]
clear_cache = "mayutils.scripts.clear_cache:app"
generate_encryption_key = "mayutils.environment.oauth:generate_fernet_key"
refresh_stubs = "mayutils.scripts.refresh_stubs:app"

[tool.commitizen]
changelog_file = "CHANGELOG.md"
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version = "1.2.52"
version_files = ["pyproject.toml:^version"]

[tool.mdformat]
wrap = 1000

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.uv]
default-groups = ["dev"]
prerelease = "if-necessary-or-explicit"

[tool.uv.sources]
mayutils = {workspace = true}
